--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
   "dependencies": {
     "lodash": "^3.10.1",
     "soap": "^0.8.0",
-    "soap-cookie": "^0.10.1"
+    "soap-cookie": "^0.10.1",
+    "xml2json": "^0.9.0"
   },
   "devDependencies": {
     "code": "1.x.x",
