--- a/package.json
+++ b/package.json
@@ -1,9 +1,12 @@
 {
   "name": "node-vsphere-soap",
-  "version": "0.0.3",
+  "version": "0.0.4",
   "description": "interface to vSphere SOAP/WSDL from node for interfacing with vCenter or ESXi",
   "main": "lib/client.js",
-  "author": "reedog117",
+  "author": [
+    "reedog117",
+    "korzhev"
+  ],
   "scripts": {
     "test": "lab"
   },
@@ -15,10 +18,9 @@
     "url": "https://github.com/reedog117/node-vsphere-soap/issues"
   },
   "dependencies": {
-    "lodash": "^3.10.1",
-    "soap": "^0.8.0",
+    "soap": "^0.19.0",
     "soap-cookie": "^0.10.1",
-    "xml2json": "^0.9.0"
+    "xml2json": "^0.11.0"
   },
   "devDependencies": {
     "code": "1.x.x",
